# cyoa

./: .gitignore  Cargo.toml  README.md  example.cyoa  example.py
src/: engine.rs  main.rs
src/engine/: parser.rs
